--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.8.2",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
