--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.8.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.13.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
